--- a/web/WEB-INF/common/navigation.jspf
+++ b/web/WEB-INF/common/navigation.jspf
@@ -6,7 +6,7 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="/logout.do">Logout</a></li>
+        <li><a href="logout.do">Logout</a></li>
 
     </ul>
 
